started adding features and contirbution

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
 
     <section class="container text-center p-top">
-      <h3>Webiste Hosting is merely a commodity these days; theres lots of cloud prividers that have reached massive scale, establishing a market price, and each has their own unique benefits. Even though they all offer the necessary infrastructure to host a website, the process to achieve this is usally a lot harder than it seems. We are changing this.</h3>
+      <h3>Webiste Hosting is merely a commodity these days; theres lots of cloud prividers that have reached massive scale, establishing "market prices". Even though they all offer the necessary infrastructure/services to host a website, the process to achieve this is usally not as simple as it seems... But don't worry, We are changing this.</h3>
       
       <div class="row p-top">
         <div class="col-lg-3 col-md-6">
@@ -124,6 +124,19 @@
         </div>
 
       </div>
+    </section>
+
+    <!-- FEATURES SECTION -->
+    <section class="container text-center p-top">
+      <h2>Features</h2>
+    </section>
+
+    <!-- COLLABORATE -->
+    <section class="container text-center p-top">
+      <h2>Wanna partake?</h2>
+      <p>We are a fully open source project and we welcome anybody/everybody from anywhere to help out in the project. If you are interested check out our contribution guide and jump intio our project board. We will feature weekly sprints for the product through zoom open for everybody to partiocipate, just sign up for the weekly sprint and youll recieve a join link in your email. If you feel you cant contribute in code or if you simply dont have the time but you still wanna show your support you can always make a donation :)</p>
+      <!-- bellow the paragraph add a button to donate in crypto-->
+      <!-- add form on the right with the fields name, email and role (select list with options: currently collaborating on an issue, interest in grabbing an issue, want to learn more) -->
     </section>
 
     <script src="js/collapse.js"></script>
