rearranged getting started section and added ubuntu font

--- a/index.html
+++ b/index.html
@@ -50,11 +50,20 @@
 
       <h2>Install globally and enjoy a seamless one-command deployment experience on all your static projects</h2>
       
-      <div class="get-started">
-        <ol>
-          <li><button class="codebox">npm i -g torus-cli</button></li>
-          <li><button class="codebox">torus init -g</button></li>
-          <li><button class="codebox">torus deploy</button></li>
+      <div class="row get-started">
+        <ol class="text-left">
+          <div class="col-lg-4">
+            <li>Install Globally</li>
+            <button class="codebox">npm i -g torus-cli</button>
+          </div>
+          <div class="col-lg-4">
+            <li>One time configuration</li>
+            <button class="codebox">torus init -g</button>
+          </div>
+          <div class="col-lg-4">
+            <li>Deploy your project</li>
+            <button class="codebox">torus deploy</button>
+          </div>
         </ol>
       </div>
     </section>
