added neumorphic effects, worked more on the styles of pricing and index

--- a/pricing.html
+++ b/pricing.html
@@ -55,12 +55,9 @@
 <section>
   <div class="container">
     <div class="text-center">
-      <h2>Pay for what you use</h2>
+      <h1>Pay for what you use only</h1>
+      <h2 style="font-size: 3rem; font-weight: 300;">Torus.hosting is completely open source and free.</h2>
     </div>
-    <p class="p-pay">Torus.hosting is completely open source and free. However your website's traffic can incur in costs with your cloud providers. At the moment, Torus.hosting works with AWS Cloud and GoDaddy. More integrations are coming soon. 
-      If you don't have an account with AWS you can go ahead and open one here.  The free tier is very generous to get started. 
-      Typically a site The services that Torus uses are listed below:</p>
-
     <div class="text-center pt-5">
       <div class="card-pricing">
         <div>
@@ -100,6 +97,12 @@
     </div>
   </div>
   </div>
+
+  <div class="container pt-5">
+    <p class="p-pay">Torus.hosting is completely open source and free. However your website's traffic can incur in costs with your cloud providers. At the moment, Torus.hosting works with AWS Cloud and GoDaddy. More integrations are coming soon. 
+     <p>The services that Torus uses are listed below:</p>  
+  </div>
+
 
   <div class="container pt-5">
 
