minor changes to style and pricing sheet

--- a/pricing.html
+++ b/pricing.html
@@ -99,7 +99,7 @@
   </div>
 
   <div class="container pt-5">
-    <p class="p-pay">Torus.hosting is completely open source and free. However your website's traffic can incur in costs with your cloud providers. At the moment, Torus.hosting works with AWS Cloud and GoDaddy. More integrations are coming soon. 
+    <p class="p-pay">Torus.hosting is completely open source and free. However your website's traffic can incur in costs with your cloud providers. At the moment, Torus.hosting works with AWS Cloud and GoDaddy. 
      <p>The services that Torus uses are listed below:</p>  
   </div>
 
