last changes to style

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="nav-links">
     <a href="#features" class="nav-link"><span>Features</span></a>
     <a href="pricing.html" class="nav-link"><span>Pricing</span></a>
-    <a href="torus.tools" class="nav-link"><span>Tools</span></a>
+    <a href="arjan.tools" class="nav-link"><span>Tools</span></a>
     <a href="docs.html" class="nav-link"><span>Docs</span></a>
   </div>
 
@@ -63,9 +63,13 @@
       
       <div class="header-button">
        <a href="#get-started"><button class="neumorphic-1">Instant Deploy</button></a>
+       <a href="https://github.com/torus-tools/stack">   
         <button>
           <img height="30px" src="img/github_logo.svg" alt="github logo">
         </button>
+      </a> 
+
+
       </div>
     </header>
 
@@ -73,10 +77,10 @@
     <div class="container text-center">
       <div class="pt-5">
       <h2 id="header-h2">Install Torus and deploy your first project in less than 1 minute.</h2>
-      <p>Torus automates the whole deployment process including domain/dns operations, cloud infrastructure and content delivery across different providers. 
-          Works with AWS Cloud and Godaddy.</p>
+      <p>Torus automates the whole deployment process including domain/dns operations, cloud infrastructure and content delivery across different providers. We currently support AWS Cloud and Godaddyr, but more are coming soon.   
+      </p>
     </div>
-      <div class=" grid-get-started get-started pt-3 pb-5">
+      <div class=" grid-get-started get-started pt-3 pb-5" id="get-started">
           <div class="neumorphic-1 neumorphic-bg">
             <h4>1. Install Globally</h4>
             <p class="p-install">Make sure to have Nodejs12+ and NPM installed</p>
@@ -146,7 +150,7 @@
       <p>Webiste Hosting is merely a commodity these days; theres lots of cloud prividers that have reached massive scale, establishing "market prices". Even though they all offer the necessary infrastructure/services to host a website, the process to achieve this is usally not as simple as it seems... But don't worry, We are changing this.</p>
     </div>
 
-    <section class="container text-center p-top">
+    <section class="text-center p-top">
       <h2>How it Works</h2>
 
       <div class="grid-benefits">
@@ -190,7 +194,7 @@
 
 
     <!-- FEATURES SECTION -->
-    <section id="features" class="container text-center p-top">
+    <section id="features" class="text-center pt-5">
       <h2>Features</h2>
   
       <div class="grid-features">
@@ -282,7 +286,7 @@
   <footer class="pt-5">
     <div class="footer-torus">
       <span>Powered by </span>
-      <a style="text-decoration: none;" href="https://torus-digital.com/">
+      <!-- <a style="text-decoration: none;" href="https://torus-digital.com/"> -->
         <span>Torus</span>
       </a>
     </div>
