--- a/pricing.html
+++ b/pricing.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="css/collapse.css">
 </head>
 <body>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <nav class="topnav" id="myTopnav">
+  <nav class="topnav" style="background-color: transparent;" id="myTopnav">
     <!-- TORUS LOGO -->
     <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.55 80.65">
       <defs>
@@ -37,9 +36,8 @@
     <a href="index.html" class="nav-logo active"><span>Torus</span></a>
     
     <div class="nav-links">
-      <a href="#features" class="nav-link"><span>Features</span></a>
       <a href="pricing.html" class="nav-link"><span>Pricing</span></a>
-      <a href="torus.tools" class="nav-link"><span>Tools</span></a>
+      <a href="tools.html" class="nav-link"><span>Tools</span></a>
       <a href="docs.html" class="nav-link"><span>Docs</span></a>
     </div>
   
@@ -55,15 +53,14 @@
 <section>
   <div class="container">
     <div class="text-center">
-      <h1>Pay for what you use only</h1>
-      <h2 style="font-size: 3rem; font-weight: 300;">Torus.hosting is completely open source and free.</h2>
+      <h1 class="header-h1">Torus Pricing</h1>
+      <h2 style="font-size: 3rem; font-weight: 300;">There are no tiers in Torus.  Only one premium plan that is free forever and works for everyone.</h2>
     </div>
     <div class="text-center pt-5">
       <div class="card-pricing">
         <div>
           <div class="bg-card card-title-2">
             <h4 class="m-0">Premium</h4>
-            <p style="font-size: 16px;" class="m-0">A plan that works for everyone </p>
           </div>
           <div class="card-free">
           <h4 style="display: inline-block; " class="m-0">Free </h4> <p style="display: inline-block;"> forever </p>
@@ -76,15 +73,11 @@
           <li>
             Enterprise-grade global edge network
           </li>
-
           <li>
-            High-performance builds with SLAs
+            Unlimited Forms
           </li>
           <li>
-            Unlimited Forms, Identity, & Functions
-          </li>
-          <li>
-            Unlimited Analytics for all sites
+            Unlimited serverless functions
           </li>
           <li>
             Domain name transfer automation
@@ -92,15 +85,17 @@
           <li>
             Unlimited team members
           </li>
+          <li>
+            Deploy from Github organizations
+          </li>
         </ul>
       </div>
     </div>
   </div>
-  </div>
+  </div> 
 
   <div class="container pt-5">
-    <p class="p-pay">Torus.hosting is completely open source and free. However your website's traffic can incur in costs with your cloud providers. At the moment, Torus.hosting works with AWS Cloud and GoDaddy. 
-     <p>The services that Torus uses are listed below:</p>  
+    <p class="p-pay">Torus.hosting is completely open source and free. There are no tiers, so don't worry that it will get expensive as you grow.  However your website's traffic can incur in costs with your cloud infrastructure providers. The services that Torus uses are listed below:</p>   
   </div>
 
 
@@ -142,19 +137,64 @@
         <td></td>
       </tr>
     </table>
-
-
-
   </div>
+</section>
 
+
+
+<section>
+<div class="container pt-5">
+<h3 style="font-size: 4rem" class="text-center">Static website cost breakdown<h3>
+
+<div class="grid-features">
+<div>
+  <p>
+    Let's say you have 10,000 new visitors a day for a month.  Each visitor clicked 1 page and returned a single request of 1mb each for a total of 300GB. Half the requests are from Europe and half from USA.  The total cost for your website turns out $27.53.
+  </p>
+</div>
+<div>
+  <table class="center">
+    <tr>
+      <td>
+        Cloudfront CDN
+      </td>
+
+    <td>$27</td>
+    <tr>
+     <td>Route 53 DNS</td>
+ <td>$0.50</td>
+ </tr>
+ <tr>
+   <td>
+    S3 Storage
+   </td>
+   <td>
+
+    $0.03
+   </td>
+ </tr>
+
+ <tr>
+  <th>Total</th>
+  <th>$27.53</th>
+</tr>
+  </table>
+</div>
+
+</div>
+</div>
+</div>
 
 </section>
+
+
+
 <footer class="pt-5">
   <div class="footer-torus">
-    <span>Powered by </span>
+    <!-- <span>Powered by </span>
     <a style="text-decoration: none;" href="https://torus-digital.com/">
       <span>Torus</span>
-    </a>
+    </a> -->
   </div>
 </footer>
 
