--- a/pricing.html
+++ b/pricing.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Custom styles for this template -->
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="We don't believe in tiers or vendor lockin. Torus is completely opens source and free. Use it as you want.">
+    <meta name="author" content="Torus Digital">
+    <title>Torus Pricing: Free for everyone forever</title>
+    <link rel="icon" href="img/torus_favicon.png">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/collapse.css">
-</head>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+  </head>
 <body>
 
   <nav class="topnav" style="background-color: transparent;" id="myTopnav">
@@ -113,11 +117,11 @@
       </tr>
       <tr id="row-aws">
         <td><strong>AWS</strong></td>
-        <td>$.50 per hosted zone</td>
-        <td>$.023 per GB</td>
-        <td>$.09 per GB N.America</td>
-        <td>$1 per website</td>
-        <td>$0.20 per million</td>
+        <td><a class="a-cost" href="https://aws.amazon.com/route53/" >Route53</a><br>$.50 per hosted zone</td>
+        <td style="vertical-align: top;"><a class="a-cost" href="https://aws.amazon.com/S3/">S3</a><br>$.023 per GB</td>
+        <td><a class="a-cost" href="https://aws.amazon.com/cloudfront/">Cloudfront</a><br>$.09 per GB N.America</td>
+        <td><a class="a-cost" href="https://aws.amazon.com/codepipeline/">Codepipeline</a><br>$1 per website</td>
+        <td><a class="a-cost" href="https://aws.amazon.com/lambda/">Lambda</a><br>$0.20 per million</td>
       </tr>
       <tr>
         <td id="free-tier">Free Tier</td>
@@ -143,12 +147,12 @@
 
 
 <section>
-<div class="container pt-5">
+<div class="container pt-5 pb-5">
 <h3 style="font-size: 4rem" class="text-center">Static website cost breakdown<h3>
 
-<div class="grid-features">
+<div class="grid-cost">
 <div>
-  <p>
+  <p style="margin:0">
     Let's say you have 10,000 new visitors a day for a month.  Each visitor clicked 1 page and returned a single request of 1mb each for a total of 300GB. Half the requests are from Europe and half from USA.  The total cost for your website turns out $27.53.
   </p>
 </div>
@@ -183,20 +187,55 @@
 
 </div>
 </div>
-</div>
 
 </section>
 
 
 
-<footer class="pt-5">
-  <div class="footer-torus">
-    <!-- <span>Powered by </span>
-    <a style="text-decoration: none;" href="https://torus-digital.com/">
-      <span>Torus</span>
-    </a> -->
+<footer style="background-color: #050505;">
+    
+  <div class="container">
+   
+   <div class="footer-buttons pt-3 pb-3">
+
+    <div class="btn-padding">
+      <a href="https://twitter.com/Torus_Tools?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-text="Check out Torus Hosting: An open source &amp; free deployment system." data-related="Torus_tools" data-show-screen-name="false" data-show-count="false">Follow @Torus_Tools</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+
+    <div class="btn-padding">
+    <a class="github-button" href="https://github.com/torus-tools/stack" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-icon="octicon-star" data-size="large" aria-label="Star torus-tools/stack on GitHub">Star</a>
+    </div>
+
+    <div class="btn-padding">
+<!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/torus-tools/stack/fork" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-icon="octicon-repo-forked" data-size="large" aria-label="Fork torus-tools/stack on GitHub">Fork</a>      </div>    
+     
+    <div class="btn-padding">
+      <a href="docs.html"><button class="btn-docs">Docs</button> </a>
+    </div>
+
+    </div>
+
+    <div class="pb-3">
+      <h4 style="font-size: 2rem;" class="text-center pb-2">Sign up for important updates</h4>
+      <div style="display: flex; justify-content: center;">
+      <form action="#">
+        <input style="padding: 1rem 9rem 1rem 8px; border-radius: 8px; color: #050505;" type="email" id="email" name="email" placeholder="Your Email Address" required="">
+        <button class="btn-signup" type="submit" id="">Subscribe</button>
+      </form>
+      </div>
+     </div>
   </div>
+<div style="background-color: #140028; padding: 1rem">
+
+<span>Powered by </span>
+<span>Torus</span>
+
+</div>
 </footer>
+
+
+
 
 </body>
 </html>
