added padding bottom to tools section before footer

--- a/tools.html
+++ b/tools.html
@@ -55,7 +55,7 @@
     <div class="container">
     <h1 class="header-h1">Torus Tools</h1>
 
-    <div class="grid-sdk">
+    <div class="grid-sdk pb-5">
       <div>
         <p>We are working on a open source tool kit to help you have a better developer experience as a front end developer when working with static websites. 
         </p>
@@ -116,14 +116,14 @@
       </div>
 
       <div class="btn-padding">
-<!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/torus-tools/stack/fork" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-icon="octicon-repo-forked" data-size="large" aria-label="Fork torus-tools/stack on GitHub">Fork</a>      </div>    
-       
-      <div class="btn-padding">
+        <a class="github-button" href="https://github.com/torus-tools/stack/fork" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-icon="octicon-repo-forked" data-size="large" aria-label="Fork torus-tools/stack on GitHub">Fork</a>      
+    </div>    
+      
+    <div class="btn-padding">
         <a href="docs.html"><button class="btn-docs">Docs</button> </a>
-      </div>
+    </div>
 
-      </div>
+    </div>
 
       <div class="pb-3">
         <h4 style="font-size: 2rem;" class="text-center pb-2">Sign up for important updates</h4>
