added quote, fixed some content, styling and header value prop

--- a/pricing.html
+++ b/pricing.html
@@ -10,7 +10,6 @@
     <link rel="icon" href="img/torus_favicon.png">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/collapse.css">
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 <body>
 
@@ -58,7 +57,7 @@
   <div class="container">
     <div class="text-center">
       <h1 class="header-h1">Torus Pricing</h1>
-      <h2 style="font-size: 3rem; font-weight: 300;">There are no tiers in Torus.  Only one premium plan that is free forever and works for everyone.</h2>
+      <h2 style="font-size: 3rem; font-weight: 300;">There are no tiers in Torus.  Only one premium plan that is free forever and works for everyone; from starters to enterprises.</h2>
     </div>
     <div class="text-center pt-5">
       <div class="card-pricing">
@@ -99,11 +98,11 @@
   </div> 
 
   <div class="container pt-5">
-    <p class="p-pay">Torus.hosting is completely open source and free. There are no tiers, so don't worry that it will get expensive as you grow.  However your website's traffic can incur in costs with your cloud infrastructure providers. The services that Torus uses are listed below:</p>   
+    <p class="p-pay">Torus hosting is completely open source and free. There are no tiers, so don't worry that it will get more expensive as you grow.  However your website's traffic can incur in costs with your cloud infrastructure providers. The services that Torus uses are listed below:</p>   
   </div>
 
 
-  <div class="container pt-5">
+  <div class="container pt-5" style="overflow-x: autor;">
 
     <table class="table-features">
       <tr>
@@ -199,22 +198,22 @@
    <div class="footer-buttons pt-3 pb-3">
 
     <div class="btn-padding">
-      <a href="https://twitter.com/Torus_Tools?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-text="Check out Torus Hosting: An open source &amp; free deployment system." data-related="Torus_tools" data-show-screen-name="false" data-show-count="false">Follow @Torus_Tools</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a href="https://twitter.com/Torus_Hosting"> <img src="img/twitter_logo.svg" class="logo-footer" alt="twitter logo"></a>
     </div>
 
     <div class="btn-padding">
-    <a class="github-button" href="https://github.com/torus-tools/stack" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-icon="octicon-star" data-size="large" aria-label="Star torus-tools/stack on GitHub">Star</a>
+      <a href="https://github.com/torus-tools/stack"><img src="img/github_logo.svg" class="logo-footer" alt="github logo"></a> 
     </div>
 
     <div class="btn-padding">
-<!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/torus-tools/stack/fork" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-icon="octicon-repo-forked" data-size="large" aria-label="Fork torus-tools/stack on GitHub">Fork</a>      </div>    
+      <a href="https://www.npmjs.com/package/@torus-tools/content"><img src="img/npm_logo.svg" class="logo-footer" alt=""> </a>      
+    </div>    
      
     <div class="btn-padding">
-      <a href="docs.html"><button class="btn-docs">Docs</button> </a>
+      <a href="docs.html"><img src="img/docs_icon_2.svg" class="logo-footer" alt="docs logo"></a>
     </div>
 
-    </div>
+  </div>
 
     <div class="pb-3">
       <h4 style="font-size: 2rem;" class="text-center pb-2">Sign up for important updates</h4>
