changes to style, dont remember exactly what

--- a/pricing.html
+++ b/pricing.html
@@ -56,8 +56,8 @@
 <section>
   <div class="container">
     <div class="text-center">
-      <h1 class="header-h1">Torus Pricing</h1>
-      <h2 style="font-size: 3rem; font-weight: 300;">There are no tiers in Torus.  Only one premium plan that is free forever and works for everyone; from starters to enterprises.</h2>
+      <h1>Torus Pricing</h1>
+      <h2 style="font-size: 2.2rem; font-weight: 300;">There are no tiers in Torus.  Only one premium plan that is free forever and works for everyone; from starters to enterprises.</h2>
     </div>
     <div class="text-center pt-5">
       <div class="card-pricing">
@@ -83,7 +83,7 @@
             Unlimited serverless functions
           </li>
           <li>
-            Domain name transfer automation
+            DNS automation
           </li>
           <li>
             Unlimited team members
@@ -98,13 +98,13 @@
   </div> 
 
   <div class="container pt-5">
-    <p class="p-pay">Torus hosting is completely open source and free. There are no tiers, so don't worry that it will get more expensive as you grow.  However your website's traffic can incur in costs with your cloud infrastructure providers. The services that Torus uses are listed below:</p>   
+    <p class="p-pay">Torus hosting is completely open source and free. There are no tiers, so don't worry that it will get more expensive as you grow or fall into the scary "contact us" pricing plan. However your website's traffic can incur in costs with your cloud infrastructure providers. Nonetheless you only pay for what you use and costs are 100% variable. </p> 
   </div>
 
 
-  <div class="container pt-5" style="overflow-x: autor;">
-
-    <table class="table-features">
+  <div class="container pt-5">
+    <h3 style="font-size: 4rem" class="text-center">Services used by Torus:</h3>  
+    <table class="table-features neumorphic-table">
       <tr>
         <th>Provider</th>
         <th>DNS</th>
@@ -172,11 +172,17 @@
     S3 Storage
    </td>
    <td>
-
     $0.03
    </td>
  </tr>
-
+ <tr>
+  <td>
+   99.99% SLA
+  </td>
+  <td>
+   $0
+  </td>
+</tr>
  <tr>
   <th>Total</th>
   <th>$27.53</th>
