--- a/tools.html
+++ b/tools.html
@@ -50,7 +50,7 @@
 <!-- TOOLS -->
 <section class="text-center">
     <div class="container">
-    <h1 class="header-h1">Torus Tools</h1>
+    <h1>Torus Tools</h1>
 
     <div class="grid-sdk pb-5">
       <div>
