added new gabe pic, fixed header button size, other

--- a/pricing.html
+++ b/pricing.html
@@ -98,7 +98,7 @@
   </div> 
 
   <div class="container pt-5">
-    <p class="p-pay">Torus hosting is completely open source and free. There are no tiers, so don't worry that it will get more expensive as you grow or fall into the scary "contact us" pricing plan. However your website's traffic can incur in costs with your cloud infrastructure providers. Nonetheless you only pay for what you use and costs are 100% variable. </p> 
+    <p class="p-pay">Torus hosting is completely open source and free. There are no tiers, so don't worry that it will get more expensive as you grow. However your website's traffic can incur in costs with your cloud infrastructure providers. Nonetheless you only pay for what you use and costs are 100% variable.</p> 
   </div>
 
 
@@ -156,7 +156,7 @@
   </p>
 </div>
 <div>
-  <table class="center">
+  <table class="center neumorphic-table">
     <tr>
       <td>
         Cloudfront CDN
