--- a/tools.html
+++ b/tools.html
@@ -54,7 +54,7 @@
 
     <div class="grid-sdk pb-5">
       <div>
-        <p>We are working on a open source tool kit to help you have a better developer experience as a front end developer when working with static websites. 
+        <p>We are working on a open source tool kit to help you have a better developer experience as a front end developer with static websites. 
         </p>
       </div>
 
