--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
            class="txt-rotate"
            data-period="2000"
            data-rotate='[ "All in one", "Open source", "Unlimited", "Effortless"]'></span>
-      <br><span id="color-change">hosting</span> for 
-        <br>static websites
+      <br><span id="color-change">hosting</span> 
+        <br>for static websites
       </h1>
       </div>
 
       <div class="container">
        <h2 style="font-size: 2.2rem; font-weight: 300; margin: 0 auto 0 auto; padding-bottom: 3rem; max-width: 600px;">
-        A zero-config tool that automates the whole deployment process with your favorite cloud providers. 
+        A simple to use CLI that automates the whole deployment process with your favorite cloud providers. 
        </h2>
       </div>
       
@@ -76,7 +76,7 @@
 
       <div class="done bg-gradient-button">
         <div class="bg-button p-1">
-          <a href="#get-started" style="text-decoration: none; color:#fafafa;">Deploy your site. It's super easy!</a>
+          <a href="#get-started" style="text-decoration: none; color:#fafafa; font-size: 1.6rem;">Deploy your site with one command</a>
           </div>
           </div>
 
@@ -85,7 +85,7 @@
 
     <section>
       <div class="container pt-5">
-        <h2 class="pb-3" style="font-size: 3.5rem;">A free deployment system that gives you greater
+        <h2 class="pb-3" style="font-size: 3.5rem;">A free deployment system that gives you more
         </h2>
         <div class="grid-benefits">
               <div class="card">
@@ -136,13 +136,13 @@
           </div>
           <div class="neumorphic-1">
             <h4>2. One time Config</h4>
-            <p class="p-install">Configure your cloud and domain providers only once</p>
-            <button class="codebox">torus init -g</button>
+            <p class="p-install">Configure your cloud and domain providers globally</p>
+            <button class="codebox">torus init -g -p=aws</button>
           </div>
           <div class="neumorphic-1">
             <h4>3. Deploy</h4>
-            <p class="p-install">Just one command. You must be in the root folder</p>
-            <button class="codebox">torus deploy</button>
+            <p class="p-install">You must be in the root folder of your project</p>
+            <button class="codebox">torus stack create prod</button>
           </div>
         </ol>
       </div>
@@ -222,7 +222,7 @@
       <div class="bg-dark-purple p-1">
         <p style="font-size: 2.5rem; margin: 0;">"We are standardizing hosting throughout all cloud providers, giving users more control, lowering switching costs, ending vendor lock-in and democratizing the way content is published to the web"    </p>
         <div style="display: flex; justify-content: center;">
-        <img src="img/gabriel_pic.png" style="border-radius: 50%; height: 80px; margin: 1rem 0;" alt="">
+        <img src="img/gabriel_profile_pic.jpeg" style="border-radius: 50%; height: 80px; margin: 1rem 0;" alt="">
         </div>
         <p style="display: flex; justify-content: center; margin: 0; font-size: 1.6rem;">- Gabriel Kardonski <br> Lead Developer Torus Hosting </p>
       </div>
@@ -237,19 +237,19 @@
 
      <div class="grid-sdk">
        <div>
-         <p>Torus Hosting is made up of a full feature command line interface and 3 SDK's; Stack, Domains, and Content.
-           The CLI facilitates the interaction with the SDKs while providing a great developer experience. The SDKs standardizes the different services among
-           the different cloud providers and domain registrars.
+         <p>Torus Hosting is made up of a multi command line interface and 4 SDK's; Stack, Domains, Content and Init.
+           The CLI facilitates the interaction with the SDKs. The SDKs standardizes the different services among
+           the different cloud providers and domain registrars. You can also build on top of the SDKs without the use of the CLI. 
          </p>
        </div>
 
        <div class="card-sdk neumorphic-sdk">
         <h3 class="sdk-title">The CLI</h3>
-        <p>A full feature command line interface made with OCLIF</p>
+        <p>A multi command line interface made with OCLIF that provides a great developer experience.</p>
       </div>
 
        <div class="card-sdk neumorphic-sdk">
-         <h3 class="sdk-title">1. Stack:</h3>
+         <h3 class="sdk-title">Stack:</h3>
          <p>A promise-based javascript SDK that generates and deploys JSON cloudformation templates for static websites
            in AWS. It uses the AWS SDK to create, and execute changesets in a particular sequence that enables
            automation of the entire process while maintaining a short deployment time.</p>
@@ -257,16 +257,21 @@
 
 
        <div class="card-sdk neumorphic-sdk">
-         <h3 class="sdk-title">2. Domains:</h3>
+         <h3 class="sdk-title">Domains:</h3>
          <p>A promise-based javascript SDK for standarizing and managing nameserver and DNS operations accross multiple domain name registrars.</p>
        </div>
 
 
 
        <div class="card-sdk neumorphic-sdk">
-         <h3 class="sdk-title">3. Content:</h3>
+         <h3 class="sdk-title">Content:</h3>
          <p>A promise-based javascript SDK for simultaneously updating content in S3 and the cache in Cloudfront.</p>
        </div>
+
+       <div class="card-sdk neumorphic-sdk">
+        <h3 class="sdk-title">Config:</h3>
+        <p>A promise-based javascript SDK for configuring Torus globally in your machine, or on a per-project basis.</p>
+      </div>
 
        <div class="pt-3">
          <img class="img-diagram" src="img/torus-hosting-diagram.svg" alt="architecural diagram torus hosting">
@@ -276,7 +281,7 @@
     </div>
   </section>
 
-<section class="pt-5"> 
+<section class="pt-3"> 
   <div class="container">
       <div>
         <h5 class="font-banner">Want to learn more?  </h5> 
@@ -312,6 +317,11 @@
         Currently we only support AWS Cloud and Godaddy.  Soon we will be adding other major cloud and domain providers to offer you a multi provider experience.   You will be able to mix and match the best services from your favorite providers; all under one simple to use tool.
         To do so, we will be switching from cloudformation to Terraform.
       </p>
+      <p>
+       We are adding continuous integration
+       for popular front end frameworks such as React, Gatsby js, Svelte, Vue, Ember and others.  You will able to use CicleCI which has a very generous free plan for starters or AWS codebuild for a more robust pay as you use solution. 
+      </p>
+
       <p>
         If you are interested in adding new providers create the feature request <a href="https://github.com/torus-tools/stack/issues" class="a-cost">here</a> and we will add it to our pipeline; or feel free to submit your own pull request.
       </p>
