added stuff for docs

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="nav-links">
     <a href="pricing.html" class="nav-link"><span>Pricing</span></a>
     <a href="tools.html" class="nav-link"><span>Tools</span></a>
-    <a href="docs.html" class="nav-link"><span>Docs</span></a>
+    <a href="docs/index.html" class="nav-link"><span>Docs</span></a>
   </div>
 
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
