--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <section>
       <div class="pt-5 container">
       <video class="deploy-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" class="get-video">
-        <source src="video/arjan_deploy_video.mp4">
+        <source src="video/torus_host_video.mp4">
       </video>
       </div>
     </section>
