--- a/index.html
+++ b/index.html
@@ -165,11 +165,21 @@
   <div class="grid-features">
 
   <div class="card-features">
-    <h3 class="h3-features">Cache Invalidation</h3>
+    <h3 class="h3-features">Custom Domains</h3>
+    <p class="p-features">Deploy websites with your own domain</p>
+  </div>
+
+  <div class="card-features">
+    <h3 class="h3-features">HTTPS</h3>
+    <p class="p-features">Obtain a secure URL by adding a free SSL certificate to your projects</p>
+  </div>
+
+  <div class="card-features">
+    <h3 class="h3-features">Cache Invalidations</h3>
     <p class="p-features">Instanty updates the edge network's cache globally every time you make a change. </p>
   </div>
   <div class="card-features">
-    <h3 class="h3-features">Free SLA</h3>
+    <h3 class="h3-features">SLA Agrement</h3>
    <p class="p-features">Includes a 99.99% SLA automatically with all your builds</p>
   </div>
   <div class="card-features">
@@ -180,10 +190,7 @@
     <h3 class="h3-features">External DNS</h3>
    <p class="p-features">Use other DNS providers with cloudfront</p>
   </div>
-  <div class="card-features">
-    <h3 class="h3-features">Continous Deployment</h3>
-   <p class="p-features">Just `git push` or `torus deploy` to have you project live.</p>
-  </div>
+
   <div class="card-features">
     <h3 class="h3-features">Import Resources</h3>
    <p class="p-features">Automatically imports all your existing resources from your cloud providers in your projects.</p>
@@ -201,14 +208,15 @@
     <h3 class="h3-features">Pre-defined Templates</h3>
    <p class="p-features">Get started right away with some pre defined cloudformation templates (dev, test, prod)</p>
   </div>
+
   <div class="card-features">
-    <h3 class="h3-features">Teams</h3>
-   <p class="p-features">Creates per-stack IAM roles allowing you to asign team member per project</p>
+    <h3 class="h3-features">Continous Deployment <small>(Coming Soon)</small> </h3>
+   <p class="p-features">Integrations with several CI/CD providers will allow you to publish the changes you push to your git remote.</p>
   </div>
 
   <div class="card-features">
-    <h3 class="h3-features">HTTPS</h3>
-    <p class="p-features">Automatically adds free HTTPS to every project</p>
+    <h3 class="h3-features">Teams <small>(Coming Soon)</small></h3>
+   <p class="p-features">Creates per-stack IAM roles allowing you to asign team member per project</p>
   </div>
   
 </div>
