made changes in index

--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
        </div>
 
        <div class="card-sdk neumorphic-sdk">
-        <h3 class="sdk-title">The CLI</h3>
+        <h3 class="sdk-title">CLI</h3>
         <p class="p-main">A multi command line interface made with OCLIF that provides a great developer experience.</p>
       </div>
 
        <div class="card-sdk neumorphic-sdk">
-         <h3 class="sdk-title">Stack:</h3>
+         <h3 class="sdk-title">Stack SDK</h3>
          <p class="p-main">A promise-based javascript SDK that generates and deploys JSON cloudformation templates for static websites
            in AWS. It uses the AWS SDK to create, and execute changesets in a particular sequence that enables
            automation of the entire process while maintaining a short deployment time.</p>
@@ -265,19 +265,19 @@
 
 
        <div class="card-sdk neumorphic-sdk">
-         <h3 class="sdk-title">Domains:</h3>
+         <h3 class="sdk-title">Domains SDK</h3>
          <p class="p-main">A promise-based javascript SDK for standarizing and managing nameserver and DNS operations accross multiple domain name registrars.</p>
        </div>
 
 
 
        <div class="card-sdk neumorphic-sdk">
-         <h3 class="sdk-title">Content:</h3>
+         <h3 class="sdk-title">Content SDK</h3>
          <p class="p-main">A promise-based javascript SDK for simultaneously updating content in S3 and the cache in Cloudfront.</p>
        </div>
 
        <div class="card-sdk neumorphic-sdk">
-        <h3 class="sdk-title">Config:</h3>
+        <h3 class="sdk-title">Config SDK</h3>
         <p class="p-main">A promise-based javascript SDK for configuring Torus globally in your machine, or on a per-project basis.</p>
       </div>
 
@@ -290,12 +290,8 @@
   </section>
 
 <section class="pt-3"> 
-  <div class="container">
-      <div>
-        <h5 class="font-banner">Want to learn more?  </h5> 
- 
-      <p style="display: inline-block;"> Check out the</p>
-      <a id="docs" href="#docs">docs</a> 
+  <div class="container text-center">
+      <h3 style="display: inline-block;"> For more info check out the <a href="#docs">docs</a></h3> 
   </div>
 </section>
 
@@ -343,10 +339,9 @@
       <div class="grid-sdk">
           <div class="text-center text-md-left">
             <h4 class="gradient-text" style="font-size: 5rem;">Join Us</h4> 
-            <p class="p-main">We are a fully open source project and welcome everyone to join us. If you are interested check out our contribution guide and jump into the project board.</p>
+            <p class="p-main">We are a fully open source project and welcome everyone to join us. If you are interested in contributing, or just want to see what we are currently working on, click on the project board bellow.</p>
           </div>
           <div class="pb-3">
-            <h3 style="text-align: center;">Click the board</h3>
             <a href="https://github.com/orgs/torus-tools/projects/1"><img src="img/board.svg" alt="" class="img-board center"> </a>
           </div>
         </section>
