--- a/tools.html
+++ b/tools.html
@@ -1,11 +1,39 @@
     <!DOCTYPE html>
     <html lang="en">
         <head>
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120987591-5"></script>
+            <script>
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+
+              gtag('config', 'UA-120987591-5');
+            </script>
+
+
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-            <meta name="description" content="Have a better developer experience with Torus Toolkit. Local dev server with live reload, automatic localization, serverless forms, auditing, optimization and more!">
-            <meta name="author" content="Torus Digital">
+            <meta name="description" content="Have a better developer experience with static websites as a front end developer. Local dev server with live reload, automatic localization, serverless forms, auditing, optimization and more!">
+            <meta name="author" content="Torus Host">
             <title>Torus Tools: A toolkit for static websites</title>
+
+
+                        <!-- TWITTER META TAG -->
+          <meta name="twitter:card" content="summary_large_image">
+          <meta name="twitter:site" content="@Torus_Host">
+          <meta name="twitter:creator" content="@lucas_kardo">
+          <meta name="twitter:title" content="Torus - Hosting for static websites">
+          <meta name="twitter:description" content="All in one, fully open source hosting.  Just one command to deploy an enterprise-grade website.">
+          <meta name="twitter:image" content="https://s3.amazonaws.com/images.pub/img/torus_host_card.png">
+          
+          <!-- Open Graph Meta Tag -->
+          <meta property="og:url" content="https://torus.host" />
+          <meta property="og:type" content="website" />
+          <meta property="og:title" content="Torus - Hosting for static websites" />
+          <meta property="og:description" content="All in one, fully open source hosting.  Just one command to deploy an enterprise-grade website."/>
+          <meta property="og:image" content="https://s3.amazonaws.com/images.pub/img/torus_host_og.png" />
+    
             <link rel="icon" href="img/torus_favicon.png">
             <link rel="stylesheet" href="css/bootstrap.min.css">
             <link rel="stylesheet" href="css/collapse.css">
