added github to nav, and changed header h2

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <a href="pricing.html" class="nav-link"><span>Pricing</span></a>
         <a href="tools.html" class="nav-link"><span>Tools</span></a>
         <a href="docs/index.html" class="nav-link"><span>Docs</span></a>
+        <a href="https://github.com/torus-tools/stack" class="nav-link"><img src="img/github_logo.svg" style="height: 30px;" 
+          alt="github logo"></a>
       </div>
 
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -96,7 +98,7 @@
 
       <div class="container">
         <h2 style="font-size: 2.2rem; font-weight: 300; margin: 0 auto 0 auto; padding-bottom: 3rem; max-width: 600px;">
-          A simple to use CLI that automates the whole deployment process with your favorite cloud providers.
+          An easy to use CLI that automates the whole deployment process with your favorite cloud providers.
         </h2>
       </div>
 
