--- a/tools.html
+++ b/tools.html
@@ -68,6 +68,8 @@
           <a href="pricing.html" class="nav-link"><span>Pricing</span></a>
           <a href="tools.html" class="nav-link"><span>Tools</span></a>
           <a href="docs/index.html" class="nav-link"><span>Docs</span></a>
+          <a href="https://github.com/torus-tools/stack" class="nav-link"><img src="img/github_logo.svg" style="height: 30px;" 
+            alt="github logo"></a>
         </div>
       
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
