--- a/tools.html
+++ b/tools.html
@@ -68,7 +68,7 @@
           <a href="pricing.html" class="nav-link"><span>Pricing</span></a>
           <a href="tools.html" class="nav-link"><span>Tools</span></a>
           <a href="docs/index.html" class="nav-link"><span>Docs</span></a>
-          <a href="https://github.com/torus-tools/stack" class="nav-link"><img src="img/github_logo.svg" style="height: 30px;" 
+          <a href="https://github.com/torus-tools" class="nav-link"><img src="img/github_logo.svg" style="height: 30px;" 
             alt="github logo"></a>
         </div>
       
